--- a/src/CareLeavers.Web/CareLeavers.Web.csproj
+++ b/src/CareLeavers.Web/CareLeavers.Web.csproj
@@ -15,7 +15,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="contentful.aspnetcore" Version="8.3.0" />
       <PackageReference Include="GovUk.Frontend.AspNetCore" Version="2.8.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.3.0" />
     </ItemGroup>
 
     <ItemGroup>
@@ -76,6 +78,8 @@
       <_ContentIncludedByDefault Remove="wwwroot\lib\jquery\dist\jquery.min.js" />
       <_ContentIncludedByDefault Remove="wwwroot\lib\jquery\dist\jquery.min.map" />
       <_ContentIncludedByDefault Remove="wwwroot\lib\jquery\LICENSE.txt" />
+      <_ContentIncludedByDefault Remove="Views\Home\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Home\Privacy.cshtml" />
     </ItemGroup>
 
 </Project>
