--- a/src/tests/CareLeavers.Integration.Tests/CareLeavers.Integration.Tests.csproj
+++ b/src/tests/CareLeavers.Integration.Tests/CareLeavers.Integration.Tests.csproj
@@ -10,6 +10,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AngleSharp" Version="1.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.12" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0"/>
         <PackageReference Include="NSubstitute" Version="5.3.0" />
