--- a/.github/workflows/validate-web.yaml
+++ b/.github/workflows/validate-web.yaml
@@ -19,6 +19,21 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set Node.js 20.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+
+      - name: Run install
+        uses: borales/actions-yarn@v5
+        with:
+          cmd: install
+          dir: ./src/web/CareLeavers.Web
+
+      - name: Run Gulp Dev
+        working-directory: ./src
+        run: gulp dev
+
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
@@ -31,7 +46,7 @@ jobs:
         working-directory: ./src
         run: dotnet restore --locked-mode
 
-      - name: Build API
+      - name: Build Web
         working-directory: ./src
         run: dotnet build --no-restore
 
