--- a/src/web/CareLeavers.Web/package.json
+++ b/src/web/CareLeavers.Web/package.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
-    "dfe-frontend": "^2.0.1",
-    "gulp": "^5.0.0"
+    "dfe-frontend": "^2.0.1"
   },
   "devDependencies": {
+    "gulp": "^5.0.0",
     "gulp-sass": "^6.0.0",
     "sass": "^1.83.4"
   }
