Introduction of Terraform, Logging and Deployments

--- a/src/web/CareLeavers.Web/Dockerfile
+++ b/src/web/CareLeavers.Web/Dockerfile
@@ -4,6 +4,14 @@ WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
+FROM node:20 AS node
+WORKDIR /src
+COPY "web/CareLeavers.Web/package.json" "web/CareLeavers.Web/yarn.lock" "web/CareLeavers.Web/Gulpfile.js" ./
+COPY "web/CareLeavers.Web/AssetSrc/" "AssetSrc/"
+RUN yarn install
+RUN npm install -g gulp
+RUN gulp dev
+
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
@@ -20,4 +28,5 @@ RUN dotnet publish "CareLeavers.Web.csproj" -c $BUILD_CONFIGURATION -o /app/publ
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+COPY --from=node /src/wwwroot/ wwwroot
 ENTRYPOINT ["dotnet", "CareLeavers.Web.dll"]
