--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -13,6 +13,14 @@
     "UsePreviewApi": false
   },
   "Caching": {
-    "Enabled": true
+    "Type": "Memory",
+    "ConnectionString": ""
+  },
+  "ApplicationInsights": {
+    "ConnectionString": ""
+  },
+  "Translation":{
+    "Method": "None",
+    "AzureApiKey": ""
   }
 }
