--- a/.gitignore
+++ b/.gitignore
@@ -349,6 +349,24 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
+# IDE settings
 .idea/
+.vscode/
+*.swp
 
 src/web/CareLeavers.Web/wwwroot
+
+# Node.js dependencies
+node_modules/
+package-lock.json
+yarn.lock
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Ignoring obj folder
+/obj/
