--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -1,7 +1,5 @@
 on:
-  push:
-    branches: [ "feat/terraform" ]
-
+  workflow_dispatch:
 
 jobs:
   package:
@@ -33,42 +31,42 @@ jobs:
       - name: Push Back End API Docker Image
         run: docker push ghcr.io/${{ env.REPO }}:${{ github.sha }}
 
-#  terraform_dependencies:
-#    name: 'Provision Terraform Dependencies'
-#    runs-on: ubuntu-latest
-#    permissions:
-#      contents: read
-#      id-token: write
-#    environment:
-#      name: 'Test'
-#    steps:
-#      - name: 'Az CLI login'
-#        uses: azure/login@v2
-#        with:
-#          creds: |
-#            {
-#                "clientId": "${{ secrets.AZURE_CLIENT_ID }}",
-#                "clientSecret": "${{ secrets.AZURE_CLIENT_SECRET }}",
-#                "tenantId": "${{ secrets.AZURE_TENANT_ID }}",
-#                "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
-#            }
-#
-#      - name: Create TF State dependencies
-#        uses: azure/cli@v2
-#        with:
-#          azcliversion: latest
-#          inlineScript: |
-#            az group create --name s186${{ vars.ENVIRONMENT_PREFIX }}-cl-tfstate --location westeurope --output none --tags "Environment=${{ vars.CIP_ENVIRONMENT }}" "Product=Design Operations" "Service=Newly onboarded" "Service offering=Design operations"
-#
-#            az storage account create --name s186${{ vars.ENVIRONMENT_PREFIX }}cltfstate --resource-group s186${{ vars.ENVIRONMENT_PREFIX }}-cl-tfstate --location westeurope --sku Standard_LRS
-#
-#            az storage container create --name tfstate --account-name s186${{ vars.ENVIRONMENT_PREFIX }}cltfstate
+  terraform_dependencies:
+    name: 'Provision Terraform Dependencies'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
+    environment:
+      name: 'Test'
+    steps:
+      - name: 'Az CLI login'
+        uses: azure/login@v2
+        with:
+          creds: |
+            {
+                "clientId": "${{ secrets.AZURE_CLIENT_ID }}",
+                "clientSecret": "${{ secrets.AZURE_CLIENT_SECRET }}",
+                "tenantId": "${{ secrets.AZURE_TENANT_ID }}",
+                "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
+            }
+
+      - name: Create TF State dependencies
+        uses: azure/cli@v2
+        with:
+          azcliversion: latest
+          inlineScript: |
+            az group create --name s186${{ vars.ENVIRONMENT_PREFIX }}-cl-tfstate --location westeurope --output none --tags "Environment=${{ vars.CIP_ENVIRONMENT }}" "Product=Design Operations" "Service=Newly onboarded" "Service offering=Design operations"
+
+            az storage account create --name s186${{ vars.ENVIRONMENT_PREFIX }}cltfstate --resource-group s186${{ vars.ENVIRONMENT_PREFIX }}-cl-tfstate --location westeurope --sku Standard_LRS
+
+            az storage container create --name tfstate --account-name s186${{ vars.ENVIRONMENT_PREFIX }}cltfstate
 
 
   deploy_infrastructure:
     name: 'Provision Infrastructure'
     runs-on: ubuntu-latest
-#    needs: [terraform_dependencies]
+    needs: [terraform_dependencies]
     permissions:
       contents: read
       id-token: write
