--- a/.github/workflows/validate-deployment.yaml
+++ b/.github/workflows/validate-deployment.yaml
@@ -13,11 +13,19 @@ jobs:
   accessibility_scan:
     name: 'Run Pa11y Accessibility Scan'
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./src
     steps:
       - uses: actions/checkout@v4
+
+      - name: Set Node.js 20.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+
+      - name: Run install
+        uses: borales/actions-yarn@v5
+        with:
+          cmd: install
+          dir: ./src/web/CareLeavers.Web
 
       - name: Run accessibility scans
         working-directory: ./src/e2e/pa11y
