--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "ContentfulOptions": {
-    "DeliveryApiKey": "",
-    "PreviewApiKey": "",
-    "SpaceId": "",
+    "DeliveryApiKey": "ZwTU2wbHPWSNUWg6-ys_8OKbO52sQVun3xD6fXo-Vwg",
+    "PreviewApiKey": "RtMIN5LMd-jv-GA-zNKR6emKxydVL_frP0oQQIxZcxk",
+    "SpaceId": "3y72rykjd1o",
     "UsePreviewApi": false
   },
   "Caching": {
