More fixes against SonarCloud issues

--- a/src/web/CareLeavers.Web/Dockerfile
+++ b/src/web/CareLeavers.Web/Dockerfile
@@ -19,11 +19,11 @@ COPY ["web/CareLeavers.Web/CareLeavers.Web.csproj", "CareLeavers.Web/"]
 RUN dotnet restore "CareLeavers.Web/CareLeavers.Web.csproj"
 COPY . .
 WORKDIR "/src/web/CareLeavers.Web"
-RUN dotnet build "CareLeavers.Web.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "CareLeavers.Web.csproj" -c "$BUILD_CONFIGURATION" -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "CareLeavers.Web.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "CareLeavers.Web.csproj" -c "$BUILD_CONFIGURATION" -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
