--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -58,6 +58,7 @@ jobs:
             /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml \
             /d:sonar.coverage.exclusions=**/*.html,**/*.json,**/*.scss,**/wwwroot/** \
             /d:sonar.token="${{ secrets.SONAR_TOKEN }}" \
+            /d:sonar.dotnet.excludeTestProjects=true \
             /d:sonar.host.url="https://sonarcloud.io"
           dotnet build --no-incremental
           dotnet-coverage collect --settings dotnet-cover-config.xml -f xml -o coverage.xml "dotnet test"
