--- a/.github/workflows/validate-web.yaml
+++ b/.github/workflows/validate-web.yaml
@@ -51,4 +51,5 @@ jobs:
         run: dotnet build --no-restore
 
       - name: Run Integration Tests
-        run: dotnet test src/web/tests/**/CareLeavers.Integration.Tests.csproj --no-build --verbosity normal
+        working-directory: ./src
+        run: dotnet test --no-build --verbosity normal
