Sonar fixes in Dockerfile and project warnings

--- a/src/web/CareLeavers.Web/Dockerfile
+++ b/src/web/CareLeavers.Web/Dockerfile
@@ -8,8 +8,8 @@ FROM node:20 AS node
 WORKDIR /src
 COPY "web/CareLeavers.Web/package.json" "web/CareLeavers.Web/yarn.lock" "web/CareLeavers.Web/Gulpfile.js" ./
 COPY "web/CareLeavers.Web/AssetSrc/" "AssetSrc/"
-RUN yarn install
-RUN npm install -g gulp
+RUN yarn install --ignore-scripts
+RUN npm install -g gulp --ignore-scripts
 RUN gulp dev
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
@@ -17,7 +17,7 @@ ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["web/CareLeavers.Web/CareLeavers.Web.csproj", "CareLeavers.Web/"]
 RUN dotnet restore "CareLeavers.Web/CareLeavers.Web.csproj"
-COPY . .
+COPY ./web/CareLeavers.Web ./web/CareLeavers.Web
 WORKDIR "/src/web/CareLeavers.Web"
 RUN dotnet build "CareLeavers.Web.csproj" -c "$BUILD_CONFIGURATION" -o /app/build
 
@@ -25,8 +25,13 @@ FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "CareLeavers.Web.csproj" -c "$BUILD_CONFIGURATION" -o /app/publish /p:UseAppHost=false
 
+FROM alpine:latest as security_provider
+RUN addgroup -S nonroot && adduser -S nonroot -G nonroot
+
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 COPY --from=node /src/wwwroot/ wwwroot
+COPY --from=security_provider /etc/passwd /etc/passwd
+USER nonroot
 ENTRYPOINT ["dotnet", "CareLeavers.Web.dll"]
