--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -59,7 +59,7 @@ jobs:
             /d:sonar.coverage.exclusions=**/Program.cs,**/*.html,**/*.json,**/*.scss,**/wwwroot/** \
             /d:sonar.token="${{ secrets.SONAR_TOKEN }}" \
             /d:sonar.dotnet.excludeTestProjects=true \
-            /d:sonar.host.url="https://sonarcloud.io"
+            /d:sonar.host.url="https://sonarcloud.io" \
             /d:sonar.scanner.scanAll=false
           dotnet build --no-incremental
           dotnet-coverage collect --settings dotnet-cover-config.xml -f xml -o coverage.xml "dotnet test"
