--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -56,10 +56,11 @@ jobs:
             /o:dfe-digital \
             /d:sonar.qualitygate.wait=true \
             /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml \
-            /d:sonar.coverage.exclusions=**/*.html,**/*.json,**/*.scss,**/wwwroot/** \
+            /d:sonar.coverage.exclusions=**/Program.cs,**/*.html,**/*.json,**/*.scss,**/wwwroot/** \
             /d:sonar.token="${{ secrets.SONAR_TOKEN }}" \
             /d:sonar.dotnet.excludeTestProjects=true \
-            /d:sonar.host.url="https://sonarcloud.io"
+            /d:sonar.host.url="https://sonarcloud.io" \
+            /d:sonar.scanner.scanAll=false
           dotnet build --no-incremental
           dotnet-coverage collect --settings dotnet-cover-config.xml -f xml -o coverage.xml "dotnet test"
           dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
