Fix pa11y yarn directory

--- a/.github/workflows/validate-deployment.yaml
+++ b/.github/workflows/validate-deployment.yaml
@@ -25,7 +25,7 @@ jobs:
         uses: borales/actions-yarn@v5
         with:
           cmd: install
-          dir: ./src/web/CareLeavers.Web
+          dir: ./src/e2e/pa11y
 
       - name: Run accessibility scans
         working-directory: ./src/e2e/pa11y
