--- a/.github/workflows/validate-deployment.yaml
+++ b/.github/workflows/validate-deployment.yaml
@@ -29,4 +29,4 @@ jobs:
 
       - name: Run accessibility scans
         working-directory: ./src/e2e/pa11y
-        run: yarn pa11y-ci --sitemap https://s186${{ github.event.inputs.environment_prefix }}-cl-web-fd.azurefd.net/sitemap.xml
+        run: yarn pa11y-ci ---config pa11y.json --sitemap https://s186${{ github.event.inputs.environment_prefix }}-cl-web-fd.azurefd.net/sitemap.xml
