--- a/.github/workflows/validate-zap-scan.yaml
+++ b/.github/workflows/validate-zap-scan.yaml
@@ -2,7 +2,7 @@ name: Validate - Deployment
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "feat/zap" ]
   workflow_dispatch:
     inputs:
       environment_prefix:
