--- a/.github/workflows/validate-zap-scan.yaml
+++ b/.github/workflows/validate-zap-scan.yaml
@@ -23,6 +23,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'https://s186${{ github.event.inputs.environment_prefix }}-cl-web-fd.azurefd.net'
+#          target: 'https://s186${{ github.event.inputs.environment_prefix }}-cl-web-fd.azurefd.net'
+          target: 'https://s186d01-cl-web-fd.azurefd.net'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
