--- a/.github/workflows/validate-zap-scan.yaml
+++ b/.github/workflows/validate-zap-scan.yaml
@@ -1,8 +1,6 @@
 name: Validate - Zap Scan
 
 on:
-  push:
-    branches: [ "main", "feat/zap" ]
   workflow_dispatch:
     inputs:
       environment_prefix:
@@ -23,7 +21,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-#          target: 'https://s186${{ github.event.inputs.environment_prefix }}-cl-web-fd.azurefd.net'
-          target: 'https://s186d01-cl-web-fd.azurefd.net'
+          target: 'https://s186${{ github.event.inputs.environment_prefix }}-cl-web-fd.azurefd.net'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
