Move CSP urls to config

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -22,5 +22,11 @@
   "Translation":{
     "Method": "None",
     "AzureApiKey": ""
+  },
+  "Csp": {
+    "AllowScriptUrls": ["https://www.googletagmanager.com"],
+    "AllowStyleUrls": ["https://rsms.me"],
+    "AllowFontUrls": ["https://rsms.me"],
+    "AllowFrameUrls": ["https://www.googletagmanager.com"]
   }
 }
