Contentful image support

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -27,6 +27,7 @@
     "AllowScriptUrls": ["https://www.googletagmanager.com"],
     "AllowStyleUrls": ["https://rsms.me"],
     "AllowFontUrls": ["https://rsms.me"],
-    "AllowFrameUrls": ["https://www.googletagmanager.com"]
+    "AllowFrameUrls": ["https://www.googletagmanager.com"],
+    "AllowImageUrls": ["https://images.ctfassets.net"]
   }
 }
