Correct directory for care leavers test

--- a/src/web/tests/CareLeavers.Web.Tests/CareLeavers.Web.Tests.csproj
+++ b/src/web/tests/CareLeavers.Web.Tests/CareLeavers.Web.Tests.csproj
@@ -19,7 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\web\CareLeavers.Web\CareLeavers.Web.csproj" />
+      <ProjectReference Include="..\..\CareLeavers.Web\CareLeavers.Web.csproj" />
     </ItemGroup>
 
 </Project>
