--- a/.github/workflows/generate-zap-scan.yaml
+++ b/.github/workflows/generate-zap-scan.yaml
@@ -1,4 +1,4 @@
-name: Validate - Zap Scan
+name: Generate - Zap Scan
 
 on:
   workflow_dispatch:
@@ -10,7 +10,7 @@ on:
         options:
           - 'd01'
 jobs:
-  accessibility_scan:
+  zap_scan:
     name: 'Run Zap Scan'
     runs-on: ubuntu-latest
     steps:
@@ -22,5 +22,16 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'https://s186${{ github.event.inputs.environment_prefix }}-cl-web-fd.azurefd.net'
-          rules_file_name: '.zap/rules.tsv'
+          rules_file_name: 'src/rules.tsv'
           cmd_options: '-a'
+          allow_issue_writing: 'false'
+
+      - name: Commit and Push Report
+        run: |
+          mv report_md.md docs/testing/Security-Scan-Report.md
+          git add docs/testing/Security-Scan-Report.md
+          git config --global user.name "Documentation Bot"
+          git config --global user.email "documentation-bot-bot@users.noreply.github.com"
+          git commit -am "Generated zap scan report"
+          git push
+        continue-on-error: true
