--- a/src/e2e/CareLeavers.E2ETests/package.json
+++ b/src/e2e/CareLeavers.E2ETests/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.50.0",
+    "@types/node": "^22.12.0",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-playwright": "^2.2.0",
