--- a/src/e2e/CareLeavers.E2ETests/tsconfig.json
+++ b/src/e2e/CareLeavers.E2ETests/tsconfig.json
@@ -7,7 +7,8 @@
     "forceConsistentCasingInFileNames": true,  
     "skipLibCheck": true,
     "outDir": "dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "types": ["node", "playwright"]
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "e2e/**/*.ts"]
 }
