--- a/.github/workflows/validate-e2e.yaml
+++ b/.github/workflows/validate-e2e.yaml
@@ -17,6 +17,10 @@ jobs:
 
       - name: Run Docker Compose
         working-directory: ./src
+        env:
+          ContentfulOptions__DeliveryApiKey: ${{ secrets.CONTENTFUL_DELIVERY_API_KEY }}
+          ContentfulOptions__PreviewApiKey: ${{ secrets.CONTENTFUL_PREVIEW_API_KEY }}
+          ContentfulOptions__SpaceId: ${{ secrets.CONTENTFUL_SPACE_ID }}
         run: docker compose -f infrastructure/docker/docker-compose.yml up -d -e ContentfulOptions__DeliveryApiKey=${{ secrets.CONTENTFUL_DELIVERY_API_KEY }} -e ContentfulOptions__PreviewApiKey=${{ secrets.CONTENTFUL_PREVIEW_API_KEY }} -e ContentfulOptions__SpaceId=${{ secrets.CONTENTFUL_SPACE_ID }}
 
       - name: Install dependencies
@@ -29,4 +33,4 @@ jobs:
 
       - name: Run Playwright Tests
         working-directory: ./src/e2e/CareLeavers.E2ETests
-        run: yarn playwright test
+        run: yarn playwright test -c playwright-ci.config.ts
