--- a/src/infrastructure/docker/docker-compose.yml
+++ b/src/infrastructure/docker/docker-compose.yml
@@ -9,3 +9,6 @@ services:
     environment:
       ASPNETCORE_ENVIRONMENT: EndToEnd
       Caching__Type: "None"
+      ContentfulOptions__DeliveryApiKey: ${CONTENTFUL_DELIVERY_API_KEY}
+      ContentfulOptions__PreviewApiKey: ${CONTENTFUL_PREVIEW_API_KEY}
+      ContentfulOptions__SpaceId: ${CONTENTFUL_SPACE_ID}
