--- a/.github/workflows/validate-e2e.yaml
+++ b/.github/workflows/validate-e2e.yaml
@@ -2,7 +2,7 @@ name: Playwright Tests
 
 on:
   push:
-    branches: [ "main", "tests/mocked_service" ]
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
