Add clarity URLs to CSP

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -24,7 +24,11 @@
     "AzureApiKey": ""
   },
   "Csp": {
-    "AllowScriptUrls": ["https://www.googletagmanager.com"],
+    "AllowScriptUrls": [
+      "https://www.googletagmanager.com",
+      "https://*.clarity.ms",
+      "https://c.bing.com"
+    ],
     "AllowStyleUrls": ["https://rsms.me"],
     "AllowFontUrls": ["https://rsms.me"],
     "AllowFrameUrls": ["https://www.googletagmanager.com"],
