--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -33,17 +33,30 @@ jobs:
       - name: Push Web Docker Image
         run: docker push ghcr.io/${{ env.REPO }}:${{ github.sha }}
 
-  terraform_dependencies:
-    name: 'Provision Terraform Dependencies'
+  deploy_environment:
+    name: 'Deploy Environment'
     runs-on: ubuntu-latest
+    needs: [package]
     permissions:
       contents: read
       id-token: write
     environment:
       name: 'Test'
+    env:
+      ARM_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID }}"
+      ARM_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
+      ARM_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
+      ARM_CLIENT_SECRET: "${{ secrets.AZURE_CLIENT_SECRET }}"
+
     steps:
+      - uses: actions/checkout@v4
+      - uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_wrapper: false
+          terraform_version: 1.10.4
+
       - name: 'Az CLI login'
-        uses: azure/login@v2
+        uses: azure/login@v1
         with:
           creds: |
             {
@@ -63,29 +76,6 @@ jobs:
             az storage account create --name s186${{ vars.ENVIRONMENT_PREFIX }}cltfstate --resource-group s186${{ vars.ENVIRONMENT_PREFIX }}-cl-tfstate --location westeurope --sku Standard_LRS
 
             az storage container create --name tfstate --account-name s186${{ vars.ENVIRONMENT_PREFIX }}cltfstate
-
-
-  deploy_environment:
-    name: 'Deploy Environment'
-    runs-on: ubuntu-latest
-    needs: [terraform_dependencies, package]
-    permissions:
-      contents: read
-      id-token: write
-    environment:
-      name: 'Test'
-    env:
-      ARM_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID }}"
-      ARM_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
-      ARM_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
-      ARM_CLIENT_SECRET: "${{ secrets.AZURE_CLIENT_SECRET }}"
-
-    steps:
-      - uses: actions/checkout@v4
-      - uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_wrapper: false
-          terraform_version: 1.10.4
 
       - name: 'Terraform Init'
         id: terraform_init
@@ -111,17 +101,6 @@ jobs:
 
       - name: Lowercase the repo name and username
         run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
-
-      - name: 'Az CLI login'
-        uses: azure/login@v1
-        with:
-          creds: |
-            {
-                "clientId": "${{ secrets.AZURE_CLIENT_ID }}",
-                "clientSecret": "${{ secrets.AZURE_CLIENT_SECRET }}",
-                "tenantId": "${{ secrets.AZURE_TENANT_ID }}",
-                "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
-            }
 
       - name: 'Get publishing profile'
         run: |
