migrations fully working locally

--- a/src/web/CareLeavers.Web/CareLeavers.Web.csproj
+++ b/src/web/CareLeavers.Web/CareLeavers.Web.csproj
@@ -37,4 +37,8 @@
       <_ContentIncludedByDefault Remove="wwwroot\js\dfefrontend.min.js" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Contentful\Models\" />
+    </ItemGroup>
+
 </Project>
