Allow connect URLs

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -25,13 +25,20 @@
   },
   "Csp": {
     "AllowScriptUrls": [
-      "https://www.googletagmanager.com",
-      "https://*.clarity.ms",
-      "https://c.bing.com"
+      "https://*.googletagmanager.com"
     ],
     "AllowStyleUrls": ["https://rsms.me"],
     "AllowFontUrls": ["https://rsms.me"],
     "AllowFrameUrls": ["https://www.googletagmanager.com"],
-    "AllowImageUrls": ["https://images.ctfassets.net"]
+    "AllowImageUrls": [
+      "https://images.ctfassets.net",
+      "https://*.googletagmanager.com",
+      "https://*.google-analytics.com"
+    ],
+    "AllowConnectUrls": [
+      "https://*.googletagmanager.com",
+      "https://*.google-analytics.com",
+      "https://*.analytics.google.com"
+    ]
   }
 }
