--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -105,6 +105,7 @@ jobs:
           TF_VAR_contentful_space_id: ${{ secrets.CONTENTFUL_SPACE_ID }}
           TF_VAR_contentful_environment: ${{ vars.CONTENTFUL_ENVIRONMENT }}
           TF_VAR_contentful_preview: ${{ vars.CONTENTFUL_PREVIEW }}
+          TF_VAR_caching_type: ${{ vars.CACHING_TYPE }}
 
       - name: 'Terraform Apply'
         id: terraform_apply
