Add rich content block

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -10,7 +10,7 @@
     "DeliveryApiKey": "",
     "PreviewApiKey": "",
     "SpaceId": "",
-    "ManagementToken": "",
+    "Environment": "development",
     "UsePreviewApi": false
   },
   "Caching": {
