--- a/src/web/CareLeavers.Web/package.json
+++ b/src/web/CareLeavers.Web/package.json
@@ -1,22 +1,10 @@
 {
   "dependencies": {
-    "@actions/core": "^1.11.1",
-    "chalk": "^5.4.1",
-    "contentful-cli": "^3.7.3",
-    "contentful-management": "^11.43.0",
-    "dfe-frontend": "^2.0.1",
-    "dotenv": "^16.4.7"
+    "dfe-frontend": "^2.0.1"
   },
   "devDependencies": {
     "gulp": "^5.0.0",
     "gulp-sass": "^6.0.0",
     "sass": "^1.83.4"
-  },
-  "scripts": {
-    "get-environment-version": "node utils/get-environment-version.js",
-    "verify-space-capacity": "node utils/verify-space-capacity.js",
-    "verify-migrations-against-manifest": "node utils/verify-migrations-against-manifest.js",
-    "set-environment-version": "node utils/set-environment-version.js",
-    "point-alias-at-environment": "node utils/point-alias-at-environment.js"
   }
 }
