--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -12,6 +12,10 @@
     "SpaceId": "",
     "UsePreviewApi": false
   },
+  "Analytics": {
+    "GTM": "",
+    "Clarity": ""
+  },
   "Caching": {
     "Type": "Memory",
     "ConnectionString": ""
@@ -25,17 +29,21 @@
   },
   "Csp": {
     "AllowScriptUrls": [
-      "https://*.googletagmanager.com"
+      "https://*.googletagmanager.com",
+      "https://*.clarity.ms",
+      "https://c.bing.com"
     ],
     "AllowStyleUrls": ["https://rsms.me"],
     "AllowFontUrls": ["https://rsms.me"],
-    "AllowFrameUrls": ["https://www.googletagmanager.com"],
+    "AllowFrameUrls": ["https://*.googletagmanager.com"],
     "AllowImageUrls": [
       "https://images.ctfassets.net",
       "https://*.googletagmanager.com",
       "https://*.google-analytics.com"
     ],
     "AllowConnectUrls": [
+      "https://*.clarity.ms",
+      "https://c.bing.com",
       "https://*.googletagmanager.com",
       "https://*.google-analytics.com",
       "https://*.analytics.google.com"
