Moved Analytics into main appsettings.json

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -13,8 +13,8 @@
     "UsePreviewApi": false
   },
   "Analytics": {
-    "GTM": "",
-    "Clarity": ""
+    "GTM": "GTM-M2CBTMTD",
+    "Clarity": "q52qzxjslm"
   },
   "Caching": {
     "Type": "Memory",
