Render Rich content blocks

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -10,6 +10,7 @@
     "DeliveryApiKey": "",
     "PreviewApiKey": "",
     "SpaceId": "",
+    "Environment": "development",
     "UsePreviewApi": false
   },
   "Analytics": {
