Fully mocked E2E mode and additional tests

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -38,7 +38,7 @@
     "AllowFontUrls": ["https://rsms.me"],
     "AllowFrameUrls": ["https://*.googletagmanager.com"],
     "AllowImageUrls": [
-      "https://images.ctfassets.net",
+      "images.ctfassets.net",
       "https://*.googletagmanager.com",
       "https://*.google-analytics.com"
     ],
