--- a/.github/workflows/contentful-migrations.yml
+++ b/.github/workflows/contentful-migrations.yml
@@ -18,8 +18,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Set Node.js 20.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+
       - name: Install Contentful CLI
         run: npm install -g contentful-cli
 
       - name: Login to Contentful with management token
         run: contentful login --management-token "${{ secrets.CONTENTFUL_MANAGEMENT_TOKEN }}"
+
+      - name: Deploy Contentful migrations
+        working-directory: ./src/contentful/CareLeavers.ContentfulMigrations
+        env:
+          ContentfulOptions__DeliveryApiKey: ${{ secrets.CONTENTFUL_DELIVERY_API_KEY }}
+          ContentfulOptions__SpaceId: ${{ secrets.CONTENTFUL_SPACE_ID }}
+          ContentfulOptions__ManagementApiKey: ${{ secrets.CONTENTFUL_MANAGEMENT_TOKEN }}
+          ContentfulOptions__Environment: ${{ github.event.inputs.target_environment }}
+        run: dotnet run
