--- a/src/contentful/CareLeavers.ContenfulMigration/CareLeavers.ContenfulMigration.csproj
+++ b/src/contentful/CareLeavers.ContenfulMigration/CareLeavers.ContenfulMigration.csproj
@@ -6,6 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <UserSecretsId>6150a047-4269-4a3d-a7fb-397731372d9c</UserSecretsId>
+        <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
     </PropertyGroup>
 
     <ItemGroup>
