--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -13,9 +13,10 @@
     "Environment": "development",
     "UsePreviewApi": false
   },
-  "Analytics": {
+  "Scripts": {
     "GTM": "GTM-M2CBTMTD",
-    "Clarity": "q52qzxjslm"
+    "Clarity": "q52qzxjslm",
+    "ShareThis": "67a9d0adc7696f001258a34a"
   },
   "Caching": {
     "Type": "Memory",
@@ -30,6 +31,7 @@
   },
   "Csp": {
     "AllowScriptUrls": [
+      "https://*.sharethis.com",
       "https://*.googletagmanager.com",
       "https://*.clarity.ms",
       "https://c.bing.com"
@@ -38,11 +40,14 @@
     "AllowFontUrls": ["https://rsms.me"],
     "AllowFrameUrls": ["https://*.googletagmanager.com"],
     "AllowImageUrls": [
-      "images.ctfassets.net",
+      "https://*.sharethis.com",
+      "https://images.ctfassets.net",
+      "https://images.ctfassets.net",
       "https://*.googletagmanager.com",
       "https://*.google-analytics.com"
     ],
     "AllowConnectUrls": [
+      "https://*.sharethis.com",
       "https://*.clarity.ms",
       "https://c.bing.com",
       "https://*.googletagmanager.com",
