--- a/src/contentful/CareLeavers.ContentfulMigration/CareLeavers.ContentfulMigration.csproj
+++ b/src/contentful/CareLeavers.ContentfulMigration/CareLeavers.ContentfulMigration.csproj
@@ -7,6 +7,7 @@
         <Nullable>enable</Nullable>
         <UserSecretsId>6150a047-4269-4a3d-a7fb-397731372d9c</UserSecretsId>
         <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+        <RootNamespace>CareLeavers.ContenfulMigration</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
