Updated CSP to allow inline CSS, plus amended layouts for ShareThis

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -36,7 +36,10 @@
       "https://*.clarity.ms",
       "https://c.bing.com"
     ],
-    "AllowStyleUrls": ["https://rsms.me"],
+    "AllowStyleUrls": [
+      "https://*.sharethis.com",
+      "https://rsms.me"
+    ],
     "AllowFontUrls": ["https://rsms.me"],
     "AllowFrameUrls": ["https://*.googletagmanager.com"],
     "AllowImageUrls": [
