--- a/.github/workflows/validate-e2e.yaml
+++ b/.github/workflows/validate-e2e.yaml
@@ -3,8 +3,16 @@ name: Playwright Tests
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - 'src/web/**'
+      - 'src/e2e/CareLeavers.E2ETests/**'
+      - '.github/workflows/validate-web.yaml'
   pull_request:
     branches: [ "main" ]
+    paths:
+      - 'src/web/**'
+      - 'src/e2e/CareLeavers.E2ETests/**'
+      - '.github/workflows/validate-web.yaml'
 
 jobs:
   test:
