Added Riddle and Status Checker

--- a/src/contentful/CareLeavers.ContentfulMigration/CareLeavers.ContentfulMigration.csproj
+++ b/src/contentful/CareLeavers.ContentfulMigration/CareLeavers.ContentfulMigration.csproj
@@ -25,6 +25,15 @@
       <None Update="Migrations\*">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Migrations\0016-add-status-checker-answer.cjs">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Migrations\0017-add-status-checker.cjs">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Migrations\0018-add-riddle-block.cjs">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
