--- a/src/web/tests/CareLeavers.Integration.Tests/CareLeavers.Integration.Tests.csproj
+++ b/src/web/tests/CareLeavers.Integration.Tests/CareLeavers.Integration.Tests.csproj
@@ -12,12 +12,15 @@
     <ItemGroup>
         <PackageReference Include="AngleSharp" Version="1.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.12" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
         <PackageReference Include="NSubstitute" Version="5.3.0" />
         <PackageReference Include="NUnit" Version="3.13.3"/>
         <PackageReference Include="NUnit3TestAdapter" Version="4.2.1"/>
         <PackageReference Include="NUnit.Analyzers" Version="3.6.1"/>
-        <PackageReference Include="coverlet.collector" Version="6.0.0"/>
+        <PackageReference Include="coverlet.collector" Version="6.0.4">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
