Configure clarity var through TF

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -15,7 +15,7 @@
   },
   "Scripts": {
     "GTM": "GTM-M2CBTMTD",
-    "Clarity": "q52qzxjslm",
+    "Clarity": "",
     "ShareThis": "67a9d0adc7696f001258a34a"
   },
   "Caching": {
