--- a/.github/workflows/validate-e2e.yaml
+++ b/.github/workflows/validate-e2e.yaml
@@ -43,13 +43,19 @@ jobs:
       - name: Run Playwright Tests
         working-directory: ./src/e2e/CareLeavers.E2ETests
         run: yarn playwright test -c playwright-ci.config.ts
+        continue-on-error: true 
+
+      - name: List test results directory
+        run: ls -R ./src/e2e/CareLeavers.E2ETests/
       
       - name: Upload Playwright Test Report
+        if: always() 
         uses: actions/upload-artifact@v4
         with:
           name: playwright-report
-          path: ./src/e2e/CareLeavers.E2ETests/playwright-report
-
+          path: ./src/e2e/CareLeavers.E2ETests/playwright-report/
+          if-no-files-found: ignore
+          
       - name: Upload Screenshots on Failure
         if: failure()
         uses: actions/upload-artifact@v4
