Disable cookie banner on tests and only execute gtag command if defined

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -17,7 +17,8 @@
   "Scripts": {
     "GTM": "GTM-M2CBTMTD",
     "Clarity": "",
-    "ShareThis": "67a9d0adc7696f001258a34a"
+    "ShareThis": "67a9d0adc7696f001258a34a",
+    "ShowCookieBanner": true
   },
   "Caching": {
     "Type": "Memory",
