Added contentful app to the allow frames

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -44,7 +44,10 @@
       "https://rsms.me"
     ],
     "AllowFontUrls": ["https://rsms.me"],
-    "AllowFrameUrls": ["https://*.googletagmanager.com"],
+    "AllowFrameUrls": [
+      "https://*.googletagmanager.com",
+      "https://app.contentful.com"   
+    ],
     "AllowImageUrls": [
       "https://*.sharethis.com",
       "https://images.ctfassets.net",
