Turn off memory caching on main by default

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -21,7 +21,7 @@
     "ShowCookieBanner": true
   },
   "Caching": {
-    "Type": "Memory",
+    "Type": "None",
     "ConnectionString": "",
     "Duration": "30.00:00:00"
   },
