App settings reversion

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -5,13 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "UseMockedContentful": true,
+  "UseMockedContentful": false,
   "AllowedHosts": "*",
   "ContentfulOptions": {
     "DeliveryApiKey": "",
     "PreviewApiKey": "",
     "SpaceId": "",
-    "Environment": "mocks",
+    "Environment": "development",
     "UsePreviewApi": false
   },
   "Scripts": {
